--- a/writing/references.bib
+++ b/writing/references.bib
@@ -49,6 +49,25 @@
   file = {C:\Users\kpaquette2\Zotero\storage\YA297DWI\Businelle et al. - 2016 - Using Intensive Longitudinal Data Collected via Mo.pdf}
 }
 
+@article{chihPredictiveModelingAddiction2014,
+  title = {Predictive Modeling of Addiction Lapses in a Mobile Health Application},
+  author = {Chih, Ming-Yuan and Patton, Timothy and McTavish, Fiona M. and Isham, Andrew J. and {Judkins-Fisher}, Chris L. and Atwood, Amy K. and Gustafson, David H.},
+  year = {2014},
+  month = jan,
+  journal = {Journal of Substance Abuse Treatment},
+  volume = {46},
+  number = {1},
+  pages = {29--35},
+  issn = {1873-6483},
+  doi = {10.1016/j.jsat.2013.08.004},
+  abstract = {The chronically relapsing nature of alcoholism leads to substantial personal, family, and societal costs. Addiction-comprehensive health enhancement support system (A-CHESS) is a smartphone application that aims to reduce relapse. To offer targeted support to patients who are at risk of lapses within the coming week, a Bayesian network model to predict such events was constructed using responses on 2,934 weekly surveys (called the Weekly Check-in) from 152 alcohol-dependent individuals who recently completed residential treatment. The Weekly Check-in is a self-monitoring service, provided in A-CHESS, to track patients' recovery progress. The model showed good predictability, with the area under receiver operating characteristic curve of 0.829 in the 10-fold cross-validation and 0.912 in the external validation. The sensitivity/specificity table assists the tradeoff decisions necessary to apply the model in practice. This study moves us closer to the goal of providing lapse prediction so that patients might receive more targeted and timely support.},
+  langid = {english},
+  pmcid = {PMC3963148},
+  pmid = {24035143},
+  keywords = {Adult,Alcoholism,Bayes Theorem,Cell Phone,Cellular Phone,decision making,Decision Making,Female,Humans,Lapse prediction,machine learning,Machine learning,Male,mHealth,Middle Aged,Mobile Applications,Models Statistical,Predictive Value of Tests,Recurrence,Relapse,risk2_protocol_paper,ROC Curve,Secondary Prevention,Sensitivity and Specificity,Young Adult},
+  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\525AS6D2\\Chih et al. - 2014 - Predictive Modeling of Addiction Lapses in a Mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\AJDAP67X\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\AKNIS7HY\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\DX62KEH7\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\T9CDTXJ7\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\VXECTSNS\\Chih2014.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\D7AQLFGL\\S0740547213001827.html}
+}
+
 @article{chihPredictiveModelingAddiction2014b,
   title = {Predictive Modeling of Addiction Lapses in a Mobile Health Application},
   author = {Chih, Ming-Yuan and Patton, Timothy and McTavish, Fiona M. and Isham, Andrew J. and {Judkins-Fisher}, Chris L. and Atwood, Amy K. and Gustafson, David H.},
@@ -153,6 +172,22 @@
   file = {C:\Users\kpaquette2\Zotero\storage\XHBTHC23\S0887618524000525.html}
 }
 
+@article{jacobsonDigitalBiomarkersAnxiety2022,
+  title = {Digital Biomarkers of Anxiety Disorder Symptom Changes: {{Personalized}} Deep Learning Models Using Smartphone Sensors Accurately Predict Anxiety Symptoms from Ecological Momentary Assessments},
+  shorttitle = {Digital Biomarkers of Anxiety Disorder Symptom Changes},
+  author = {Jacobson, Nicholas C. and Bhattacharya, Sukanya},
+  year = {2022},
+  month = feb,
+  journal = {Behaviour Research and Therapy},
+  volume = {149},
+  pages = {104013},
+  issn = {00057967},
+  doi = {10.1016/j.brat.2021.104013},
+  urldate = {2022-03-19},
+  langid = {english},
+  file = {C:\Users\kpaquette2\Zotero\storage\9YWBYVSR\Jacobson and Bhattacharya - 2022 - Digital biomarkers of anxiety disorder symptom cha.pdf}
+}
+
 @article{jacobsonPassiveSensingPrediction2020,
   title = {Passive {{Sensing}} of {{Prediction}} of {{Moment-To-Moment Depressed Mood}} among {{Undergraduates}} with {{Clinical Levels}} of {{Depression Sample Using Smartphones}}},
   author = {Jacobson, Nicholas C. and Chung, Yeon Joo},
@@ -206,6 +241,23 @@
   copyright = {Unless stated otherwise, all articles are open-access distributed under the terms of the Creative Commons Attribution License (http://creativecommons.org/licenses/by/4.0/), which permits unrestricted use, distribution, and reproduction in any medium, provided the original work ("first published in JMIR mHealth and uHealth...") is properly cited with original URL and bibliographic citation information. The complete bibliographic information, a link to the original publication on http://mhealth.jmir.org/, as well as this copyright and license information must be included.},
   langid = {english},
   file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\C3R85EHT\\Kim et al. - 2019 - Depression Prediction by Using Ecological Momentar.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\M4A25KUI\\e14149.html}
+}
+
+@article{mohrPersonalSensingUnderstanding2017,
+  title = {Personal {{Sensing}}: {{Understanding Mental Health Using Ubiquitous Sensors}} and {{Machine Learning}}},
+  shorttitle = {Personal {{Sensing}}},
+  author = {Mohr, David C. and Zhang, Mi and Schueller, Stephen M.},
+  year = {2017},
+  journal = {Annual Review of Clinical Psychology},
+  volume = {13},
+  number = {1},
+  pages = {23--47},
+  doi = {10.1146/annurev-clinpsy-032816-044949},
+  urldate = {2018-06-05},
+  abstract = {Sensors in everyday devices, such as our phones, wearables, and computers, leave a stream of digital traces. Personal sensing refers to collecting and analyzing data from sensors embedded in the context of daily life with the aim of identifying human behaviors, thoughts, feelings, and traits. This article provides a critical review of personal sensing research related to mental health, focused principally on smartphones, but also including studies of wearables, social media, and computers. We provide a layered, hierarchical model for translating raw sensor data into markers of behaviors and states related to mental health. Also discussed are research methods as well as challenges, including privacy and problems of dimensionality. Although personal sensing is still in its infancy, it holds great promise as a method for conducting mental health research and as a clinical tool for monitoring at-risk populations and providing the foundation for the next generation of mobile health (or mHealth) interventions.},
+  pmid = {28375728},
+  keywords = {Humans,machine learning,Machine Learning,Mental Disorders,mental health,mHealth,Neurophysiological Monitoring,pervasive health,sensors,Telemedicine,wearables},
+  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\3NB2JYFJ\\Mohr et al. - 2017 - Personal Sensing Understanding Mental Health Usin.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\3NIFCIMX\\Mohr et al. - 2017 - Personal Sensing Understanding Mental Health Usin.pdf}
 }
 
 @article{moshontzProspectivePredictionLapses2021,
