--- a/writing/methods_results.qmd
+++ b/writing/methods_results.qmd
@@ -41,6 +41,8 @@ lapses <- read_csv(here("data/lapses.csv"),
 
 
 
+
+
 # Introduction
 
 Personal sensing is the collection and analyses of data collected via smartphone and other digital devices in the context of one's day-to-day life [@mohrPersonalSensingUnderstanding2017]. 
@@ -129,28 +131,26 @@ We used a Bayesian hierarchical generalized linear model to estimate the posteri
 
 From the Bayesian model we obtained the posterior distribution (transformed back from logit) and Bayeisan CIs for auROCs all five models. To evaluate our models’ overall performance we report the median posterior probability for auROC and Bayesian CIs. This represents our best estimate for the magnitude of the auROC parameter for each model. 
 
-We then conducted Bayesian model comparisons to determine the probability that the penalized models’ performances differed systematically from the full model. We also report the precise posterior probability for the difference in auROCs and the 95% Bayesian CIs for these comparisons.
+We then conducted Bayesian model comparisons to determine the probability that the penalized models’ performances differed systematically from the baseline (no penalty) model. We also report the precise posterior probability for the difference in auROCs and the 95% Bayesian CIs for these comparisons.
 
 ## Results
 
 ### Participants
+*Kendra will characterize sample of participants here*
 
+### EMA Adherence
+Participants on average completed 3.1 (SD=0.6) of the 4 EMAs each day (78.4% adherence overall). Across the twelve weeks on study, EMA adherence ranged from 75.3% to 86.8%. 
 
-### EMA Compliance
+### EMA Sampling Frequency
 
+The baseline (no penalty) model used all available EMA observations for all participants (proportion of EMAs used = 1.0). As penalties for revealing an EMA observation became higher, overall sampling frequency for EMA observations decreased. The median proportion of EMAs used in the penalized models were .41 (range = .24 - .56), .24 (range = .16 - .34), .12 (range .03 - .20), and .04 (range = 0 - .10) for Lv1, Lv2, Lv3, and Lv4 respectively. 
 
-### Sampling Frequency
-
-```{r}
-freq |> 
-  group_by(model) |> 
-  summarise(median = median(prop), 
-            min = min(prop),
-            max = max(prop))
-```
+Figure X presents histograms that display the distribution of the proportion of EMA observations revealed for each participant. 
 
 <!-- note these plots depict 3 proportions for each subid - 1 for each repeat-->
 ```{r}
+#| echo: false
+
 freq |> 
   filter(model != "full") |> 
   ggplot(aes(x = prop)) +
@@ -161,19 +161,21 @@ freq |>
                group_by(model) |> 
                mutate(med = median(prop))) +
   labs(title = "Histogram of proportion of surveys used by subid for each penalty",
-       x = "proportion of surveys completed")
+       x = "proportion of EMA observations revealed")
 ```
 
-Plot below is not right because id in model output does not much subid so cant match to days on study.
+There doesn't appear to be a relationship between lapse and proportion of EMA surveys revealed.
 ```{r}
+#| echo: false
+
 freq |>
   filter(model != "full") |> 
   left_join(lapses, by = "subid") |> 
-  ggplot(aes(x = prop, y = prop_lapse_days), alpha = .4) +
+  ggplot(aes(x = prop, y = prop_lapse_days), alpha = .8) +
   geom_point() +
   facet_wrap(~model) +
   labs(title = "Relationship between lapses and survey frequency",
-       x = "proportion of surveys completed",
+       x = "proportion of EMA surveys revealed",
        y = "proportion of study days with lapses")
 ```
 
@@ -182,7 +184,7 @@ freq |>
 
 ### Model Evaluation
 
-Median auROCs for the XGBoost and 5 neural network models are presented in the table below. <!--We won't include XGBoost in manuscript, just keeping here for now for us.-->
+Median auROCs for the 5 neural network models are presented in the table below. <!--We won't include XGBoost in manuscript, just keeping here for now for us.-->
 ```{r}
 #| echo: false
 
@@ -193,6 +195,7 @@ aucs |>
   summarise(across(xgboost:nn_lv4, ~median(.x))) |> 
   glimpse()
 ```
+
 
 Median posterior probabilities and 95% Bayesian credible intervals for auROC for the XGBoost and 5 neural network models are presented in the table below.
 ```{r}
